--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 ---
 
 ---
@@ -13,7 +14,7 @@ $small-width: 480px;
 
 body {
     margin: 0;
-    font-family: "Inconsolata";
+    font-family: "Space Mono", sans-serif;
     background-color: #e3e3e3;
     min-height: 100%;
 }
