--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $small-width: 480px;
 
 body {
     margin: 0;
-    font-family: "Space Mono", sans-serif;
+    font-family: "Commissioner", sans-serif;
     background-color: #e3e3e3;
     min-height: 100%;
 }
