--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     <meta name="description" content="{{ desc }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ sitedir }}css/main.css">
     <link rel="icon" type="image/ico" href="{{ favicon_location }}">
     <link rel="shortcut-icon" type="image/ico" href="{{ favicon_location }}">
