--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ body {
     font-family: "Commissioner", sans-serif;
     background-color: #e3e3e3;
     min-height: 100%;
+    font-weight: 100;
 }
 a {
     text-decoration: none;
@@ -177,6 +178,7 @@ code {
     h1, h2, h3, h4 {
         margin-block-start: 2em !important;
         margin-block-end: 0em !important;
+        font-weight: 300;
     }
     h1:after, h2:after, h3:after, h4:after {
         content: '';
