--- a/css/main.scss
+++ b/css/main.scss
@@ -238,7 +238,7 @@ code {
     img {
         text-align: center;
         margin: 10px 10px 10px 10px;
-        max-width: $max-width;
+        width: 100%
     }
 
     .color-red {
