change style, rm / baseurl

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 // Customization Variables
 
-$accent: #FF0F00;
+$accent: #6f8423;
 
 $max-width: 740px;
 $med-width: 600px;
@@ -14,7 +14,8 @@ $small-width: 480px;
 body {
     margin: 0;
     font-family: "Commissioner", sans-serif;
-    background-color: #e3e3e3;
+    background-color: #ffffff;
+    color: #333333
     min-height: 100%;
     font-weight: 200;
 }
