--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ body {
     margin: 0;
     font-family: "Commissioner", sans-serif;
     background-color: #ffffff;
-    color: #333333
+    color: #333333;
     min-height: 100%;
     font-weight: 200;
 }
