--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
     {% if page.url == "/" and site.footer_only_homepage %}
         <hr>
-        <a href="{{ site.footer_url }}">{{ site.footer_text }}</a>
+        <a style="text-decoration: underline;" href="{{ site.footer_url }}">{{ site.footer_text }}</a>
     {% else %}
         <br>
     {% endif %}
