--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
         <div class="page-title">
             {{page.title}}
         </div>
+        <div class="header-image">
+            <img src="../assets/saint-silva-bw.jpg" width="100%" alt="">
+        </div>
         <div class="content">
             {{ content }}
         </div>
