--- a/css/main.scss
+++ b/css/main.scss
@@ -68,7 +68,8 @@ code {
         font-size: 32px;
         color: #272727;
         display: inline-block;
-        font-weight: 300;
+        font-weight: 500;
+        text-transform: uppercase
     }
 }
 
@@ -132,6 +133,18 @@ code {
     .container {
         max-width: $med-width;
         transition: 0.3s ease all;
+    }
+    .post-card {
+        position: relative;
+        height: 150px;
+    }
+
+    .post-card .details {
+        font-size: 14px;
+        /* make sure it is on the bottom of parent div */
+        position: absolute;
+        bottom: 0;
+        right: 0;
     }
 }
 
