--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,8 @@ a:hover {
 }
 hr {
     margin: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
