--- a/css/main.scss
+++ b/css/main.scss
@@ -59,10 +59,12 @@ code {
         margin: 0;
         padding: 5px 0 5px 0;
         margin-left: 20px;
+        font-size: 18px;
     }
     li {
         list-style-type: none;
-        margin: 0 5px 0 10px;
+        margin: 0 5px 0 15px;
+        padding: 5px;
     }
 
     padding: 30px 0 20px 0;
