ethereal bloom post

--- a/css/main.scss
+++ b/css/main.scss
@@ -20,7 +20,7 @@ body {
     font-weight: 200;
 }
 a {
-    text-decoration: none;
+    text-decoration: underline;
     color: $accent;
 }
 a:hover {
