--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,8 @@ code {
         color: #272727;
         display: inline-block;
         font-weight: 500;
-        text-transform: uppercase
+        text-transform: uppercase;
+        letter-spacing: .1rem
     }
 }
 
