make navbar smaller

--- a/css/main.scss
+++ b/css/main.scss
@@ -178,10 +178,9 @@ code {
         }
         li{
             margin: 0;
+            font-size: 14px;
         }
-        .pull-left{
-            float: none;
-        }
+        
         .site-title{
             width: 100%;
             float: none;
