--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 $accent: #6f8423;
 
-$max-width: 740px;
+$max-width: 700px;
 $med-width: 600px;
 $small-width: 480px;
 
@@ -59,7 +59,7 @@ code {
         margin: 0;
         padding: 5px 0 5px 0;
         margin-left: 20px;
-        font-size: 18px;
+        font-size: 16px;
     }
     li {
         list-style-type: none;
@@ -69,7 +69,8 @@ code {
 
     padding: 30px 0 20px 0;
     .site-title{
-        font-size: 32px;
+        font-size: 26px;
+        margin-top: 5px;
         color: #272727;
         display: inline-block;
         font-weight: 500;
@@ -80,13 +81,13 @@ code {
 
 // index
 .post-card{
-    margin-top:1em;
-    margin-bottom:1em;
+    margin-top:0.25em;
+    margin-bottom:0.25em;
     .title{
         max-width: 500px;
         color: #272727;
         display: inline-block;
-        font-size: 26px;
+        font-size: 20px;
         font-weight: 300;
     }
     .details{
