--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <div class="page-subtitle">
+    {% if page.date %}
+        <p style="font-size: 14px; font-style: italics">Posted on {{page.date}}</p>
+    {% endif %}
     {% for tag in page.tags %}
         {% if page.tags.first == tag %}
             <b>[</b>
