--- a/css/main.scss
+++ b/css/main.scss
@@ -74,7 +74,7 @@ code {
         color: #272727;
         display: inline-block;
         font-weight: 500;
-        text-transform: uppercase;
+        text-transform: lowercase;
         letter-spacing: .1rem
     }
 }
